--- a/app/templates/properties/create.html
+++ b/app/templates/properties/create.html
@@ -65,6 +65,7 @@
                         </select>
                     </div>
                     
+                    {% if current_user.can_view_sensitive_info() %}
                     <div class="row mb-3">
                         <div class="col-md-4">
                             <label for="postal_code" class="form-label">郵便番号</label>
@@ -79,6 +80,7 @@
                             <input type="text" class="form-control" id="address" name="address">
                         </div>
                     </div>
+                    {% endif %}
                     
                     <div class="row mb-3">
                         <div class="col-md-4">
@@ -101,6 +103,7 @@
                         </div>
                     </div>
                     
+                    {% if current_user.can_view_sensitive_info() %}
                     <div class="mb-3">
                         <label for="note" class="form-label">備考</label>
                         <div class="input-group">
@@ -111,6 +114,7 @@
                         </div>
                         <div class="form-text">テキストデータを貼り付けて「読み取り」ボタンを押すと、お客様名・住所・郵便番号を自動入力します</div>
                     </div>
+                    {% endif %}
                 </div>
             </div>
             
