--- a/app/templates/properties/edit.html
+++ b/app/templates/properties/edit.html
@@ -47,6 +47,7 @@
                         </select>
                     </div>
                     
+                    {% if current_user.can_view_sensitive_info() %}
                     <div class="row mb-3">
                         <div class="col-md-4">
                             <label for="postal_code" class="form-label">郵便番号</label>
@@ -61,6 +62,7 @@
                             <input type="text" class="form-control" id="address" name="address" value="{{ property.address or '' }}">
                         </div>
                     </div>
+                    {% endif %}
                     
                     <div class="row mb-3">
                         <div class="col-md-4">
@@ -83,10 +85,12 @@
                         </div>
                     </div>
                     
+                    {% if current_user.can_view_sensitive_info() %}
                     <div class="mb-3">
                         <label for="note" class="form-label">備考</label>
                         <textarea class="form-control" id="note" name="note" rows="3">{{ property.note or '' }}</textarea>
                     </div>
+                    {% endif %}
                 </div>
             </div>
             
