--- a/app/templates/properties/view.html
+++ b/app/templates/properties/view.html
@@ -42,6 +42,7 @@
                                 {% endif %}
                             </td>
                         </tr>
+                        {% if current_user.can_view_sensitive_info() %}
                         <tr>
                             <th>住所</th>
                             <td>
@@ -64,6 +65,7 @@
                                 </div>
                             </td>
                         </tr>
+                        {% endif %}
                         <tr>
                             <th>受付</th>
                             <td>{{ property.reception_type or '未設定' }}</td>
@@ -72,10 +74,12 @@
                             <th>受付明細</th>
                             <td>{{ property.reception_detail or '未設定' }}</td>
                         </tr>
+                        {% if current_user.can_view_sensitive_info() %}
                         <tr>
                             <th>備考</th>
                             <td>{{ property.note or '未設定' }}</td>
                         </tr>
+                        {% endif %}
                         <tr>
                             <th>登録日時</th>
                             <td>{{ property.created_at.strftime('%Y年%m月%d日 %H:%M') }}</td>
