--- a/app/templates/properties/view.html
+++ b/app/templates/properties/view.html
@@ -174,7 +174,7 @@
                 {% endif %}
             </div>
             <div class="card-footer">
-                <a href="{{ url_for('reports.create') }}" class="btn btn-primary w-100">
+                <a href="{{ url_for('reports.create') }}?property_id={{ property.id }}" class="btn btn-primary w-100">
                     <i class="bi bi-file-earmark-plus"></i> 新規報告書作成
                 </a>
             </div>
